--- a/style.css
+++ b/style.css
@@ -500,6 +500,11 @@ nav {
     margin: 30px 30px 0px 0px;
 }
 
+.link a {
+    color: #fff;
+    margin: 30px 30px 0px 0px;
+}
+
 @media (min-width: 768px) {
 
     .f-txt {
